--- a/ifind.1
+++ b/ifind.1
@@ -14,13 +14,14 @@ ifind \- iRODS find utility
 .B [ \-p\ \fIn\fR ]
 .B [ \-q ]
 .B [ \-s\ \fItype\fR ]
+.B [ \-S ]
 .B [ \-v ]
-.B [ \-p\ \fIpattern\fR\]
+.B [ \-p\ \fIpattern\fR ]
 .B \fIcollection\fR
 
 .SH DESCRIPTION
 
-This utility is a bit similar to the traditional find
+This utility is a bit similar to the traditional \fIfind\fR
 command in Unix.
 
 It scans a directory tree and executes a command for each
@@ -34,7 +35,7 @@ cursors so it retrieves the results in batches, how many rows
 to return in a batch is adjustable. It can be directed to scan
 only directories or files, the full pathname is returned in
 every case. The output can be sorted, reverse sort for directories
-produces a canonical order traverse list.
+produces a canonical order traverse list finishing with the top level.
 
 .TP
 .B \-h\fR
@@ -43,15 +44,16 @@ to print this help.
 .TP
 .B \-C \fIconnection\fR
 Postgres connect string to identify the database to connect to.
+Use quotes when it contains spaces.
 
 .TP
 .B \-D\fR
-Print only directories (collections).
+Print directories (collections) only.
 
 .TP
 .B \-b \fIbatchsize\fR
-the number of rows to retrieve in one batch. The default
-is 1024.
+the number of rows to retrieve from the metadata database in one batch.
+The default is 1024.
 
 .TP
 .B \-c \fIcommand\fR
@@ -59,9 +61,9 @@ is the command to execute for each file/directory.
 The absolute pathname will be appended in single quotes.
 Alternatively a printf string with '%s' markers can be
 supplied, in which case the markers will be replaced with
-the pathname, just like with printf. Only five of these can
+the pathname, just like with printf. Only four of these can
 be specified. It is best to supply this string using single
-quotes.
+quotes since it probably will contain spaces.
 
 .TP
 .B \-d \fIlevel\fR
@@ -82,10 +84,26 @@ Quiet.
 Sort type, 0 for no sort, 1 for ascending, 2 for descending.
 
 .TP
+.B \-S\fR
+Print summary at the end.
+
+.TP
 .B \-v\fR
 Verbose.
 
 .TP
 .B \fIcollection\fR
 is a collection/directory to use as root of the tree.
+
+.SH EXAMPLES
+
+The command 
+.B ifind -D -v -s 2 /snic.se/home
+will list all directories under home in reverse canonical order,
+finishing with the top level directory.
+
+To rename all files in a directory tree to have a prefix x_ you can use
+the command
+.B ifind -c \(dqimv '%s' 'x_%s'\(dq /snic.se/home/user00
+
 
