--- a/ifind.1
+++ b/ifind.1
@@ -128,5 +128,7 @@ finishing with the top level directory.
 To rename all files in a directory tree to have a prefix x_ you can use
 the command
 .B ifind -c \(dqimv '%s' 'x_%s'\(dq /snic.se/home/user00
+It might be a good idea to single quote the file names in case they include
+spaces.
 
 
