--- a/ifind.1
+++ b/ifind.1
@@ -98,7 +98,9 @@ Sort type, 0 for no sort, 1 for ascending, 2 for descending.
 
 .TP
 .B \-S\fR
-Print summary at the end.
+Print summary at the end. The transfer speed numbers can be
+meaningless in case the executed command deals only with
+metadata and not doing any actual data movement.
 
 .TP
 .B \-t\fR
