Retry option added

--- a/ifind.1
+++ b/ifind.1
@@ -95,8 +95,9 @@ approximate.
 Quiet.
 
 .TP
-.B \-r\fR
-Retry failed command three times after waiting for a minute.
+.B \-r \fIn,w,m\fR
+Retry failed command \fIn\fR times after waiting for \fIw\fR seconds,
+allowed \fIm\fR max tries all in all.
 
 .TP
 .B \-s \fItype\fR
