Small cosmetic changes

--- a/ifind.1
+++ b/ifind.1
@@ -53,6 +53,10 @@ Use quotes when it contains spaces.
 Print directory names (collections) only. The default is to print file names.
 
 .TP
+.B \-E \fIresource\fR
+Resource name to select.
+
+.TP
 .B \-b \fIbatchsize\fR
 the number of rows to retrieve from the metadata database in one batch.
 The default is 1024.
