Manual pages and help updated

--- a/ifind.1
+++ b/ifind.1
@@ -61,6 +61,10 @@ Print directory names (collections) only. The default is to print file names.
 Resource name to select.
 
 .TP
+.B \-I\fR
+Also print file IDs.
+
+.TP
 .B \-X \fIregexp\fR
 Select files or directories with matching POSIX regexp pattern.
 
